tests/ui/ast_aggregate.stderr
error[E0506]: cannot assign to `guard` because it is borrowed
  --> $DIR/ast_aggregate.rs:16:5
   |
14 |     let agg = ast::Aggregate::new( &elements, Some(&guard), Some(&guard));
   |                                                    ------ borrow of `guard` occurs here
15 |     
16 |     guard =  ast::AggregateGuard::gt(term1);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ assignment to borrowed `guard` occurs here
...
19 |     let _end = (guard, lit, agg);
   |                             --- borrow later used here

error[E0506]: cannot assign to `lit` because it is borrowed
  --> $DIR/ast_aggregate.rs:17:5
   |
11 |     let cond = ast::ConditionalLiteral::new(&lit, &condition);
   |                                             ---- borrow of `lit` occurs here
...
17 |     lit = ast::Literal::from_term(ast::Sign::NoSign, &term1);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ assignment to borrowed `lit` occurs here
18 |     drop(elements);
   |          -------- borrow later used here

error[E0505]: cannot move out of `elements` because it is borrowed
  --> $DIR/ast_aggregate.rs:18:10
   |
14 |     let agg = ast::Aggregate::new( &elements, Some(&guard), Some(&guard));
   |                                    --------- borrow of `elements` occurs here
...
18 |     drop(elements);
   |          ^^^^^^^^ move out of `elements` occurs here
19 |     let _end = (guard, lit, agg);
   |                             --- borrow later used here
